- Enable MYSQL tables to USE result instead of STORE result.   See the issue reported in MDEV-6142. modified:   storage/connect/myconn.cpp   storage/connect/myconn.h   storage/connect/tabmysql.cpp   storage/connect/tabmysql.h